--- a/Seminar/seminar2/express-practice/package.json
+++ b/Seminar/seminar2/express-practice/package.json
@@ -3,12 +3,14 @@
   "packageManager": "yarn@3.2.0",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && node dist"
+    "build": "tsc && yarn node dist"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
