--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "workspaces": [
-    "Seminar/*"
+    "Seminar/*",
+    "Assignment/*"
   ],
   "scripts": {
     "test": "jest --forceExit --detectOpenHandles",
