--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "babel-jest": "^27.5.1",
@@ -45,6 +46,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.5.1",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
