[ADD] 3주차 심화 과제

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "workspaces": [
     "Seminar/*",
-    "Assignment/*"
+    "Assignment/*",
+    "__test__/*"
   ],
   "scripts": {
     "test": "jest --silent --runInBand --detectOpenHandles --verbose --forceExit",
