--- a/Assignment/assignment4/package.json
+++ b/Assignment/assignment4/package.json
@@ -6,10 +6,12 @@
     "build": "tsc && node dist"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "express-validator": "^6.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.23",
     "@yarnpkg/pnpify": "^4.0.0-rc.1",
     "dotenv": "^16.0.0",
